# Butterfly

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  HAMILTONIAN_IMPLEMENTATION_PROMPT.md  INTEGRATION_TESTING_PROMPT.txt  KERNEL_DISCOVERY_EXECUTION_PROMPT.md  NEXT_SESSION_PROMPT.md  NO_INFERENCE_PLANNING_PROMPT.md  README.md  SECURITY.md  feedback-prompt.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE
.github/ISSUE_TEMPLATE/: config.yml
archive/hamiltonian_ttt_kit/: .gitignore  README.md  pyproject.toml
archive/hamiltonian_ttt_kit/docs/: IDEA.md
archive/hamiltonian_ttt_kit/examples/: run_demo.py  simulate_only.py
archive/hamiltonian_ttt_kit/scripts/: train_hnn.py
archive/hamiltonian_ttt_kit/src/hamiltonian_ttt/: __init__.py
archive/hamiltonian_ttt_kit/src/hamiltonian_ttt/datasets/: __init__.py  trajectories.py
archive/hamiltonian_ttt_kit/src/hamiltonian_ttt/integrators/: __init__.py  symplectic.py
archive/hamiltonian_ttt_kit/src/hamiltonian_ttt/models/: __init__.py  hnn.py  mlp.py  ttt_head.py
archive/hamiltonian_ttt_kit/src/hamiltonian_ttt/systems/: __init__.py  base.py  coupled.py  custom_template.py  harmonic.py  pendulum.py
archive/hamiltonian_ttt_kit/src/hamiltonian_ttt/ttt/: __init__.py  tune.py
archive/hamiltonian_ttt_kit/src/hamiltonian_ttt/utils/: __init__.py  finite_difference.py  metrics.py  plotting.py  random.py
archive/hamiltonian_ttt_kit/tests/: test_integrators_energy.py
archive/ttt/: __init__.py  bridge.py  buffer.py  device_profile.py  environment.py  loop.py  proposer.py  reward.py
benchmarks/cuda/: qwen3_torch_microbench_smoke.json
bna/: __init__.py  attention_dense.py  attention_hcsa.py  cli.py  data.py  data_hf.py  generate.py  graph_strategies.py  kv_cache.py  local_setup.py  model.py  permute_attention.py  tokenizers.py  train_distributed.py  utils.py
bna/compiler/: __init__.py  graph_ir.py  sexp.py
bna/discover/: __init__.py  readiness.py  session.py  targets.py
bna/graph/: __init__.py  expander.py
bna/integrations/: __init__.py  glm_mlx.py  gpt2_mlx.py  mlx_kv_quant.py  nemotron_h_torch.py  qwen_mlx.py  (+2 more)
configs/: sweep_base.yaml
data/: tinyshakespeare.txt
discover_sessions/: hcsa_active_row_session.json  hcsa_active_row_session.stub.json  hcsa_fused_attention_session.stub.json  hcsa_graph_construct_session.stub.json  hcsa_permute_window_session.json  hcsa_permute_window_session.stub.json  hcsa_sparse_gather_session.stub.json  hcsa_wayfinder_ttt_session.stub.json  manifest.json
docs/: APPLE_SILICON_SETUP.md  ARCHITECTURE.md  BUTTERFLY_GAPS.md  BUTTERFLY_MLX_DEPLOYMENT.txt  BUTTERFLY_PAPER_OUTLINE.md  BUTTERFLY_POSITIONING.md  BUTTERFLY_THEOREMS.md  COMPRESSED_BUTTERFLY_ATTENTION.md  CUDA_3080_SETUP.md  FIRST_RELEASE.md  GLOSSARY.md  HANDOFF_PROMPT.md  PUBLIC_POSITIONING.md  QWEN35_4B_MLX_BENCHMARK_REPORT.md  QWEN3_5_35B_A3B_SETUP.md  RELEASE_GATE.md  RESEARCH.md  ROADMAP.md  VISUAL_STORYBOARD.md  WAYFINDER_BLOCK_SPARSE.md  architecture.md  cuda_port_report.md  discover_setup.md  experiments.md  mlx_kernels_plan.md  mlx_reality_report.md  overnight_report_v0.3.md  qwen3_4b_infra_map.md  resilience.md
examples/: nemotron_h_cuda_demo.py
hcsa/: __init__.py  cycles.py  data_mmap.py  graph_strategies.py  train.py
notes/: LAB_NOTEBOOK.md  experiments.ndjson  todos.sqlite3
scripts/: _aggregate_decode_dense_results.py  _run_decode_dense_matrix.sh  ablation_graph_metrics.py  analyze_glm_drift_followup.py  bench.py  bench_components.py  bench_decode_wayfinder.py  bench_glm_chunked_prefill_mlx.py  bench_glm_consumer_mlx.py  bench_glm_wayfinder_mlx.py  bench_gpt2_wayfinder_mlx.py  bench_llama_cpp_metal.py  bench_mlx_wayfinder.py  bench_mlx_wayfinder_scale.py  bench_nemotron_cuda_wayfinder.py  bench_protocol_preflight_setup.sh  bench_qwen35_cuda_wayfinder.py  bench_qwen3_4b_baseline_mlx.py  bench_qwen3_4b_hha_memory_mlx.py  bench_qwen3_4b_hha_mlx.py  bench_qwen3_4b_hha_quick_mlx.py  bench_qwen3_4b_wayfinder_memory_mlx.py  bench_qwen3_4b_wayfinder_quick_mlx.py  bench_qwen_ab_mlx.py  bench_qwen_consumer_mlx.py  bench_qwen_wayfinder_mlx.py  bench_sparse_patterns_gpt2_mlx.py  bench_torch_wayfinder_scale.py  bootstrap_cuda_linux.sh  bootstrap_macos_metal.sh  bootstrap_wsl2_ubuntu.sh  chat_glm_wayfinder.py  cuda_local_env.sh  diag_compress_profile.py  e2e_correctness_check.py  env_check_cuda.py  env_check_mlx.py  eval_gpt2_quality.py  example_runs.sh  experiment_butterfly_staging_validity.py  (+49 more)
tests/: conftest.py  test_covering.py  test_d_selection.py  test_discover_setup.py  test_discover_targets.py  test_edge_disjoint_cycles.py  test_expander.py  test_laplacian_diagnostics.py  test_local_setup.py  test_qwen_cuda_wayfinder_cli.py  test_qwen_mlx_cli_guards.py  test_regularity.py  test_resilience.py  test_spectral.py  test_wayc_discover_cli.py
tests_torch/: conftest.py  test_torch_causality.py  test_torch_dense_limit_equivalence.py  test_torch_matches_mlx_reference_small.py  test_torch_no_nan.py  test_torch_permute_roundtrip.py
(+1677 files in other folders)
