[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bna"
version = "0.4.0"
description = "BNA: Butterfly Network Attention — block-sparse attention via butterfly network topology"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hunter Bown", email = "hmbown@gmail.com" }]
keywords = ["transformer", "sparse-attention", "butterfly-network", "language-model", "efficient-attention"]

dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "tqdm>=4.66",
]

[project.optional-dependencies]
bpe = ["transformers>=4.38"]
hf = ["datasets>=2.18"]
cuda = [
  "accelerate>=1.8",
  "bitsandbytes>=0.48.1",
  "fastapi>=0.115",
  "huggingface_hub>=0.31",
  "safetensors>=0.4.3",
  "torchao>=0.11",
  "transformers>=5.3.0",
  "uvicorn>=0.30",
]
dev = ["pytest>=8.0", "ruff>=0.3", "mypy>=1.8", "hypothesis>=6.0", "pytest-benchmark>=4.0"]
viz = ["matplotlib>=3.7", "networkx>=3.0"]
kernels = ["triton>=2.1"]
mlx = ["mlx>=0.10", "mlx-lm>=0.20", "zmlx>=0.9"]
sweep = ["wandb"]
experiments = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/Hmbown/Butterfly"
Repository = "https://github.com/Hmbown/Butterfly"

[tool.setuptools.packages.find]
include = ["bna*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
