[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bna"
version = "0.4.0"
description = "BNA: Butterfly Network Attention — block-sparse attention via butterfly network topology"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hunter Bown", email = "hmbown@gmail.com" }]
keywords = ["transformer", "sparse-attention", "butterfly-network", "language-model", "efficient-attention"]

dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "tqdm>=4.66",
]

[project.optional-dependencies]
bpe = ["transformers>=4.38"]
hf = ["datasets>=2.18", "sentencepiece>=0.2"]
dev = ["pytest>=8.0", "ruff>=0.3", "mypy>=1.8", "hypothesis>=6.0", "pytest-benchmark>=4.0"]
viz = ["matplotlib>=3.7", "networkx>=3.0"]
kernels = ["triton>=2.1"]
cuda4bit = ["bitsandbytes>=0.43", "accelerate>=0.30", "transformers>=4.44"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
mlx = ["mlx>=0.10", "mlx-lm>=0.20", "zmlx>=0.9", "fastapi>=0.110", "uvicorn[standard]>=0.29"]
sweep = ["wandb"]
experiments = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/Hmbown/Butterfly"
Repository = "https://github.com/Hmbown/Butterfly"

[tool.setuptools.packages.find]
include = ["bna*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
