[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hamiltonian-ttt"
version = "0.1.0"
description = "Hamiltonian mechanics simulation + Hamiltonian Neural Networks + simple Test-Time Tuning (TTT) scaffolding"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="(you)", email="you@example.com"}]
keywords = ["hamiltonian", "physics", "dynamics", "hnn", "test-time-training", "test-time-tuning"]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = ["pytest>=7.4", "ruff>=0.5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
